syntax = "proto3";
package cosmos.minakeys;

option go_package = "github.com/node101-io/pulsar/cosmos/x/minakeys/types";

message KeyStore {
  string cosmosPublicKey = 1; 
  string minaPublicKey = 2; 
  string creator = 3;
}

